[package]
name = "brakoll"
version = "0.2.5"
edition = "2024"
description = "Simple issue tracker for coding projects"
repository = "https://github.com/simon-danielsson/brakoll"
authors = ["Simon Danielsson <contact@simondanielsson.se>"]
keywords = ["utility", "development", "productivity", "cli"]
homepage = "https://www.simondanielsson.se"
license = "MIT"
rust-version = "1.94.0"

[dependencies]
crossterm = "0.29.0"
dirs = "6.0.0"
walkdir = "2.5.0"
