[package]
name = "brakoll"
version = "0.4.2"
edition = "2024"
description = "Opinionated issue tracker built for solo developers."
repository = "https://github.com/simon-danielsson/brakoll"
authors = ["Simon Danielsson <contact@simondanielsson.se>"]
keywords = ["utility", "development", "productivity", "cli"]
homepage = "https://www.simondanielsson.se"
license = "MIT"
rust-version = "1.94.0"

[dependencies]
cli-clipboard = "0.4.0"
dirs = "6.0.0"
walkdir = "2.5.0"
